# kth-is1200

./: CMakeLists.txt  README.md  labwork.S  processor.circ
lab 3/: mipslabwork.c
lab 3/time4int/: .hex  README.md  labwork.S  labwork.S~  mipslabwork.c  mipslabwork.c~  outfile.elf  outfile.hex
lab 3/time4int/.deps/: mipslabdata.c.P  mipslabmain.c.P  mipslabwork.c.P
lab 3/time4io/: .hex  labwork.S  labwork.S~  mipslabwork.c  mipslabwork.c~  outfile.elf  outfile.hex
lab 3/time4io/.deps/: mipslabfunc.c.P  time4io.c.P
lab 3/time4timer/: mipslabwork.c  mipslabwork.c~  outfile.elf  outfile.hex  time4io.c
orievg/lab-3/time4int/: labwork.S  mipslabwork.c  outfile.elf  time4io.c
orievg/lab-3/time4io/: mipslabwork.c  outfile.elf  outfile.hex
orievg/lab-3/timer4timer/: mipslabwork.c  outfile.hex
orievg/lab-4/: ass5.c
project/: README.md  a.out  helpers.c  main.c  test.c  test.h
project/.old/: labwork.S  main.c
project/test/: a.out  figures.h  out  random.c  test  test.c  test.new.c  test.old.c  test_new.c  test_non_display.c
